Add default verb object